# Verifytrade

./: .gitignore  README.md  README.zh-CN.md
circuit/: .gitignore  Nargo.toml  Prover.toml.example  README.md
circuit/src/: main.nr
contracts/: README.md  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: Competition.sol  MockZkVerify.sol
contracts/src/interfaces/: IZkVerifyAttestor.sol
contracts/test/: Competition.t.sol
docs/: architecture.html  development.md
frontend/: .env.example  .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/admin/: page.tsx
frontend/app/api/rounds/: route.ts
frontend/app/api/rounds/[roundId]/: route.ts
frontend/app/api/rounds/[roundId]/leaderboard/: route.ts
frontend/app/api/rounds/[roundId]/submit/: route.ts
frontend/app/leaderboard/[roundId]/: page.tsx
frontend/app/rounds/: page.tsx
frontend/app/submit/: page.tsx
frontend/components/: Header.tsx
frontend/lib/: api-client.ts  commitment.ts  contracts.ts  prover-browser.ts  storage.ts  tlsn-provider.ts  utils.ts  wagmi.ts  zkverify-server.ts
frontend/public/: veirfytrade.plugin.js
frontend/scripts/: sync-artifacts.mjs
notary-server/: Dockerfile
plugin/: .gitignore  README.md  config.json  esbuild.js  package.json  tsconfig.json
plugin/src/: index.ts  types.d.ts
prover/: .gitignore  Cargo.toml  README.md
prover/src/: binance.rs  bundle.rs  commitment.rs  main.rs  tlsn.rs
scripts/: .env.example  .gitignore  README.md  create-round.ts  leaderboard.ts  mock-data-generator.ts  package.json  submit-to-zkverify.ts
