[package]
name = "veirfytrade-prover"
version = "0.1.0"
edition = "2021"
authors = ["VerifyTrade"]
description = "TLSNotary prover CLI for VerifyTrade"

[[bin]]
name = "veirfytrade-prover"
path = "src/main.rs"

[dependencies]
# CLI + errors
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

# WebSocket + HTTP transport
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
http-body-util = "0.1"
hyper = { version = "1.4", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.22"
bincode = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography — BN254 Poseidon (must match Noir's std::hash::poseidon::bn254)
ark-bn254 = "0.5"
ark-ff = { version = "0.5", features = ["std"] }
light-poseidon = "0.3"
num-bigint = "0.4"

# TLSNotary — pin to a specific tag/commit when wiring up the real crates.
# The example flow uses these crates; if names move, update accordingly.
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.10", optional = true }
tlsn-prover = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.10", optional = true }
tlsn-formats = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.10", optional = true }
tlsn-common = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.10", optional = true }

[features]
# Default: build without tlsn integration so you can iterate on encoding / CLI structure.
# Enable `tlsn` once you've pinned a matching TLSNotary tag and the API checks out.
default = []
tlsn = ["dep:tlsn-core", "dep:tlsn-prover", "dep:tlsn-formats", "dep:tlsn-common"]

[profile.release]
opt-level = 3
lto = true
